unpackaged/main/default/objects/pse__Work_Opportunity_Hub__c/pse__Work_Opportunity_Hub__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Contains settings for the Work Opportunities Hub.</description>
    <label>Work Opportunities Hub</label>
</CustomObject>