unpackaged/main/default/objects/pse__Work_Opportunity_Hub__c/fields/pse__Candidate_Limit__c.field-meta.xml
<CustomField>
    <fullName>pse__Candidate_Limit__c</fullName>
    <defaultValue>5</defaultValue>
    <description>Allows up to this amount of candidates to express interest in a single resource request. The default is up to 5 candidates being supported if no value or 0 is selected.</description>
    <inlineHelpText>Allows up to this amount of candidates to express interest in a single resource request. The default is up to 5 candidates being supported if no value or 0 is selected.</inlineHelpText>
    <label>Candidate Limit</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>