unpackaged/main/default/objects/pse__Work_Opportunity_Hub__c/fields/pse__Filter_By_Primary_Skill__c.field-meta.xml
<CustomField>
    <fullName>pse__Filter_By_Primary_Skill__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enables filtering of resources by primary skill when viewing resource requests that are enabled for self-nomination.</description>
    <inlineHelpText>Enables filtering of resources by primary skill when viewing resource requests that are enabled for self-nomination.</inlineHelpText>
    <label>Deprecated:Filter by Primary Skill</label>
    <type>Checkbox</type>
</CustomField>