unpackaged/main/default/objects/pse__Work_Opportunity_Hub__c/fields/pse__Filter_By_Resource_Practice__c.field-meta.xml
<CustomField>
    <fullName>pse__Filter_By_Resource_Practice__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enables filtering by a resource's practice when viewing resource requests that are enabled for self-nomination.</description>
    <inlineHelpText>Enables filtering by a resource's practice when viewing resource requests that are enabled for self-nomination.</inlineHelpText>
    <label>Filter by Resource Practice</label>
    <type>Checkbox</type>
</CustomField>