unpackaged/main/default/objects/pse__Work_Opportunity_Hub__c/fields/pse__Filter_By_Resource_Skill_Request__c.field-meta.xml
<CustomField>
    <fullName>pse__Filter_By_Resource_Skill_Request__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enables filtering of resources by resource skill request when viewing resource requests that are enabled for self-nomination.</description>
    <inlineHelpText>Enables filtering of resources by resource skill request when viewing resource requests that are enabled for self-nomination.</inlineHelpText>
    <label>Filter by Resource Skill Request</label>
    <type>Checkbox</type>
</CustomField>